# fer-inference-demo

./: .env.example  .gitignore  README.md  app.py  inference-pipeline.puml  pyproject.toml
fer/: auxiliary_encoder.py  vit_model.py
inference/: face_detector.py  model_loader.py  pipeline.py
static/: index.html
